err/selenium-saucelabs-python.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/saucelabs'...
Compiling './lib/python3.5/site-packages/saucelabs/__init__.py'...
***   File "./lib/python3.5/site-packages/saucelabs/__init__.py", line 10
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/saucelabs/selenium'...
Compiling './lib/python3.5/site-packages/saucelabs/selenium/__init__.py'...
***   File "./lib/python3.5/site-packages/saucelabs/selenium/__init__.py", line 192
    raise Exception, result
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/saucelabs/selenium/test_ajax_jsf.py'...
***   File "./lib/python3.5/site-packages/saucelabs/selenium/test_ajax_jsf.py", line 30
    print "Using selenium server at " + self.seleniumHost + ":" + self.seleniumPort
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/saucelabs/selenium/test_default_server.py'...
***   File "./lib/python3.5/site-packages/saucelabs/selenium/test_default_server.py", line 30
    print "Using selenium server at " + self.seleniumHost + ":" + self.seleniumPort
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/selenium_saucelabs_python-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
